--- a/src/styles.less
+++ b/src/styles.less
@@ -281,6 +281,14 @@ hr{
 	background: #ffcfd2;
 	color: #322728;
 }
+.cv_high{
+	background: #b6dcb6;
+	color: #233123;
+}
+.cv_medium{
+	background: #fbe399;
+	color: #917c3e
+}
 .cv_low .cv_heighlight{
 	color: #d90000;
 }
@@ -289,6 +297,12 @@ hr{
 }
 .cv_alert .cv_heighlight{
 	color: #00a025;
+}
+.cv_high .cv_heighlight{
+	color: #00a025;
+}
+.cv_medium .cv_heighlight{
+	color: #ffc107;
 }
 .cv_heighlight{
 	font-weight: 700;
