OP-2633: Final changes related to INFRA metric type

--- a/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.less
+++ b/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.less
@@ -3,6 +3,13 @@
     top: 0;
     z-index: 100;
 }
+.sticky_metric_analysis{
+  overflow: auto;
+	max-height: 99vh;
+	background: #fff;
+	-webkit-box-shadow: 3px 3px 10px rgba(0,0,0,0.2);
+	box-shadow: 3px 3px 10px rgba(0,0,0,0.2);
+}
 .matricstatusicon{
   font-size: 10px;
   border: 1px solid lightgray;
@@ -32,4 +39,10 @@ td{
   .activeBtn{
     background-color: #d4d4d4;
   }
+}
+.scorebox{
+  width: 85px;
+}
+.tableRowCustom{
+  border-bottom: 1px solid #dee2e6 !important;
 }
